# as

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bindings.cpp  main.cpp
as/: CMakeLists.txt
as/compiler/: CMakeLists.txt  asc.cpp
as/core/: Core.cpp  Core.h  LanguageProcessor.h  ScriptModule.h  as.h  core.cpp  core.h  core_compile.cpp  core_compile.h  core_utils.cpp  core_utils.h  cpp_interface.h  cpp_interface_parser.cpp  cpp_interface_parser.h  errors.h  file_watcher.cpp  file_watcher.h  ir.cpp  ir.h  ir_names.h  language.h  language_processor.cpp  language_processor.h  language_runtime.h  language_script.h  llvm_optimizer.cpp  llvm_optimizer.h  script_interface.cpp  script_interface.h  script_module.cpp  script_module.h  script_module_compile.cpp  script_module_compile.h  script_module_runtime.cpp  script_module_runtime.h
as/kaleidoscope/: ast.h  errors.h  interpreter.cpp  parser_loop.cpp  parser_loop.h
as/languages/cpp/: CMakeLists.txt  cpp_language.cpp  cpp_language.h  cpp_language_script.cpp  cpp_language_script.h
as/languages/ivnscript/: CMakeLists.txt  is_language.cpp  is_language.h  is_language_runtime.cpp  is_language_runtime.h  is_language_script.cpp  is_language_script.h
as/languages/ivnscript/script/: error.h  expression.cpp  interpreter.cpp  interpreter.h  module.h  parser.cpp  tokenizer.cpp  tokenizer.h
as/languages/lua/: CMakeLists.txt  LLVMCompiler.cpp  LLVMCompiler.h  LuaCore.cpp  LuaCore.h  LuaLanguageProcessor.cpp  LuaLanguageProcessor.h  LuaScriptModule.cpp  LuaScriptModule.h  Utils.cpp  Utils.h  VMModule.cpp  VMModule.h  base_lua_module.cpp  base_lua_module.h  llvm_compiler.cpp  llvm_compiler.h  lua_bytecode_printer.cpp  lua_call.cpp  lua_core.cpp  lua_core.h  lua_extern_metatables.cpp  lua_extern_metatables.h  lua_ftree.cpp  lua_ftree.h  lua_hooks.cpp  lua_ir.cpp  lua_ir.h  lua_language.cpp  lua_language.h  lua_language_processor.cpp  lua_language_processor.h  lua_language_runtime.cpp  lua_language_runtime.h  lua_language_script.cpp  lua_language_script.h  lua_llvm_compiler.cpp  lua_llvm_compiler.h  lua_loader.cpp  lua_module_entry.cpp  (+11 more)
as/languages/lua/bc/: lapi.ll  lapi_bc.h  lauxlib.ll  lauxlib_bc.h  lua_vm_ops_bc.h  test_adapter.ll  test_adapter_bc.h
as/languages/lua/lua/: ldo.c  ldo.h  lfunc.c  lfunc.h  lobject.h  lstate.h  ltable.c  luaconf.h  lundump.h
as/languages/squirrel/: CMakeLists.txt  sq_adapters.cpp  sq_ir.cpp  sq_ir.h  sq_language.cpp  sq_language.h  sq_language_script.cpp  sq_language_script.h
as/languages/squirrel/bc/: sq_adapters.ll  sq_adapters_bc.h  sqapi.ll  sqapi_bc.h
as/languages/typescript/: CMakeLists.txt  ts_language.cpp  ts_language.h  ts_language_script.cpp  ts_language_script.h
as/languages/typescript/gc/: Makefile.in  configure
as/languages/typescript/gc/include/: config.h.in
as/languages/typescript/tsc/: CMakeLists.txt
as/languages/typescript/tsc/lib/TypeScript/: CMakeLists.txt  MLIRGen.cpp
as/languages/typescript/tsc/lib/TypeScriptRuntime/: CMakeLists.txt
as/languages/typescript/tsc/test/print-tester/: CMakeLists.txt
as/languages/typescript/tsc/test/tester/: CMakeLists.txt
as/languages/typescript/tsc/tsc/: CMakeLists.txt
as/languages/typescript/tsc/tsc-new-parser/: CMakeLists.txt  debug.h  scanner.cpp  types.h
benchmarks/: CMakeLists.txt  benchmark_runner.h  main.cpp  native_runner.cpp  native_runner.h
benchmarks/lua/: CMakeLists.txt
benchmarks/lua/lua_5_4_6/: CMakeLists.txt  benchmark_runner_luaclassic.cpp  benchmark_runner_luaclassic.h
benchmarks/lua/lua_as/: CMakeLists.txt  benchmark_runner_luaas.cpp  benchmark_runner_luaas.h  runner.h
benchmarks/lua/lua_classic/: benchmark_runner_luaclassic.cpp  benchmark_runner_luaclassic.h  link1.c  runner.h
benchmarks/lua/lua_jit/: CMakeLists.txt  benchmark_runner_luajit.cpp  benchmark_runner_luajit.h  link2.c  runner.h
benchmarks/lua/scripts/: test_1.lua  test_array.lua  test_calls.lua  test_cycle.lua  test_life.lua  test_nqueen.lua
benchmarks/native/: native_tests.h  test_array.cpp  test_cycle.cpp  test_life.cpp  test_nqueen.cpp
cmake/: FindLLVM.cmake  LLVMMacros.cmake
docs/: architecture-vtable.drawio  architecture.md  coding_style_guide.md  dev_notes_20240516.md  how_to_debug.md  howto_new_language.md  howto_test.md  whats_next.md
docs/rus/: architecture.md  dev_notes_20240516.md  whats_next.md
engine/: CMakeLists.txt  Logger.cpp  Logger.h  Runtime.cpp  Runtime.h
game/: CMakeLists.txt  main.cpp
kscope/: CMakeLists.txt  main.cpp
kscope/compiler/: compiler.cpp  compiler.h  jit.cpp  jit.h
kscope/kaleidoscope/: ast.cpp  errors.cpp  interpreter.h
sandbox/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp  main_compiler.cpp  main_compiler_export.cpp  main_cpp.cpp  main_hot.cpp  main_interface.cpp  main_lua.cpp  main_lua_vm.cpp  main_magic.cpp  main_scripts.cpp  main_sq.cpp  main_tests.cpp  main_v.cpp
sandbox/ivn/: CMakeLists.txt  main.cpp
sandbox/ivn/script/: error.cpp  executor.cpp  executor.h  expression.cpp  expression.h  interpreter.cpp  interpreter.h  module.cpp  parser.cpp  parser.h  tokenizer.cpp
sandbox/scripts/: logger.h  main_compiler_export.ll  opcode_test.h  opcode_test.lua  sandbox_test_1.is  sandbox_test_1.nut  sandbox_test_2.is  sandbox_test_2.nut  test.cpp  test.lua  test_1.cpp  test_1.is  test_1.lua  test_1.nut  test_1.ts  test_2.cpp  test_2.is  test_2.lua  test_2.ts  test_script.cpp  test_script.h  test_script.ll  test_v.lua  test_v.nut  test_vm.h  test_vm.lua
scripts/v/: cmake-build.sh  cmake-reset.sh  use-llvm-latest.sh  use-llvm17.sh
test/: CMakeLists.txt  core_compile_test.cpp  core_test.cpp  core_test_fixture.cpp  core_test_fixture.h  cpp_language_test.cpp  features_test_fixture.cpp  features_test_fixture.h  ir_language.cpp  ir_language.h  is_language_test.cpp  language_is_test.cpp  language_lua_test.cpp  lua_language_test.cpp  sq_language_test.cpp
test/includes/: double.h  integer.h  set_get.h  simple.h
test/scripts/: integer_script.is  integer_script.lua  simple_script.is  simple_script.lua  simple_script2.is  simple_script_external.lua
(+1 files in other folders)
